--- a/cabal.project
+++ b/cabal.project
@@ -12,27 +12,24 @@ benchmarks: true
 -- Plutus apps revision from 2022-04-06
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/plutus-apps.git
-  tag: v0.1.0
+  location: https://github.com/input-output-hk/plutus.git
   subdir:
-    doc
     freer-extras
     playground-common
-    plutus-chain-index
-    plutus-chain-index-core
+    plutus-core
     plutus-contract
-    plutus-example
-    plutus-contract-certification
+    plutus-chain-index
     plutus-ledger
-    plutus-ledger-constraints
+    plutus-ledger-api
+    plutus-tx
+    plutus-tx-plugin
     plutus-pab
-    plutus-pab-executables
-    plutus-playground-server
-    plutus-script-utils
-    plutus-streaming
-    plutus-tx-constraints
     plutus-use-cases
-    web-ghc
+    prettyprinter-configurable
+    quickcheck-dynamic
+    word-array
+  tag: plutus-starter-devcontainer/v1.0.8
+
 
 
 -- The following sections are copied from the 'plutus-apps' repository cabal.project at the revision
